fixed hamburger menu for mobile fixed card sizing on mobile fixed hamburger js

--- a/css/mycss.css
+++ b/css/mycss.css
@@ -85,7 +85,7 @@ nav {
   display: block;
   float: right;
   width: 30%;
-  height:30%; 
+  height:30%;
   padding-right: 15px;
   padding-left: 15px;
   background-color: white;
@@ -789,24 +789,36 @@ body{
 ul{
   padding-left: 0px;
 }
-    .menu_icon{
+.menu_icon{
     display: block;
   }
 
 
-    .card {
+.card {
     margin: 0;
     margin-bottom: 50px;
     width: 350px;
+    height: 330px;
+    border-radius: 5px;
   }
-    .card img{
+  .card img{
     width: 340px;
+    height: 228px;
   }
-    .CDUlogo{
+
+  .item{
+    display: none;
+  }
+
+  .collapsible{
+    display: none;
+  }
+  .CDUlogo{
       margin-top: 0px;
     width: 50%;
     left: 110px;
     margin-bottom: 20px;
+
   }
     h1{
     margin-top: 50px;
@@ -830,4 +842,13 @@ ul{
   }
 
 
+}
+
+.nav_menu li{
+  min-width: 290px;
+  max-width: 290px;
+}
+
+.nav_menu{
+  background: #EEEEEE;
 }
